Parts of the mesh disappear in Sculpt and in Edit mode but not in objec #74780

Closed
opened 2020-03-15 13:30:25 +01:00 by Bernhard · 20 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-14 18:05, hash: a210b8297f
Worked: 2.83 c26f470cfeea is last I can check

Short description of error
For some reason parts of the mesh will disappear in sculpt mode and sometimes in edit mode.
2020-03-15 22-23-42.mkv

Exact steps for others to reproduce the error
I'm not sure how the bug is produced. I created a mesh from a circle to make a body shape and at a certain point the mesh disappears when I enter sculpt mode.

Mesh Hidden Error.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-14 18:05, hash: `a210b8297f` Worked: 2.83 `c26f470cfeea` is last I can check **Short description of error** For some reason parts of the mesh will disappear in sculpt mode and sometimes in edit mode. [2020-03-15 22-23-42.mkv](https://archive.blender.org/developer/F8407312/2020-03-15_22-23-42.mkv) **Exact steps for others to reproduce the error** I'm not sure how the bug is produced. I created a mesh from a circle to make a body shape and at a certain point the mesh disappears when I enter sculpt mode. [Mesh Hidden Error.blend](https://archive.blender.org/developer/F8407362/Mesh_Hidden_Error.blend)
Author

Added subscriber: @Ravenman13

Added subscriber: @Ravenman13

#74989 was marked as duplicate of this issue

#74989 was marked as duplicate of this issue
notresponding42 commented 2020-03-16 11:27:28 +01:00 (Migrated from localhost:3001)

Added subscriber: @notresponding42

Added subscriber: @notresponding42
notresponding42 commented 2020-03-16 11:27:28 +01:00 (Migrated from localhost:3001)

This comment was removed by @notresponding42

*This comment was removed by @notresponding42*

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @PabloDobarro, @JacquesLucke

Added subscribers: @PabloDobarro, @JacquesLucke
Member

I have no idea what's going on here. I'd assume that this is somehow related to face sets, but I have no proof of that.
It seems to be related to some property that is stored per mesh element, because modifiers like the Wireframe modifier maintain it.

@PabloDobarro any idea?

I have no idea what's going on here. I'd assume that this is somehow related to face sets, but I have no proof of that. It seems to be related to some property that is stored per mesh element, because modifiers like the Wireframe modifier maintain it. @PabloDobarro any idea?

Added subscriber: @RC12

Added subscriber: @RC12

This issue was referenced by 458f50ba73

This issue was referenced by 458f50ba73bcd233176f9afadc3273acf05e4f53
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-03-26 15:51:38 +01:00
brandsofttech commented 2021-04-17 21:18:40 +02:00 (Migrated from localhost:3001)

Added subscriber: @brandsofttech

Added subscriber: @brandsofttech
brandsofttech commented 2021-04-17 21:18:40 +02:00 (Migrated from localhost:3001)

This comment was removed by @brandsofttech

*This comment was removed by @brandsofttech*
brandsofttech commented 2021-04-17 21:22:58 +02:00 (Migrated from localhost:3001)

This comment was removed by @brandsofttech

*This comment was removed by @brandsofttech*
pcsoftguru commented 2021-07-21 09:11:35 +02:00 (Migrated from localhost:3001)

Added subscriber: @pcsoftguru

Added subscriber: @pcsoftguru
pcsoftguru commented 2021-07-21 09:11:35 +02:00 (Migrated from localhost:3001)

This comment was removed by @pcsoftguru

*This comment was removed by @pcsoftguru*

Added subscriber: @dfelinto

Added subscriber: @dfelinto
greenhatfiles commented 2021-09-06 11:05:18 +02:00 (Migrated from localhost:3001)

Added subscriber: @greenhatfiles

Added subscriber: @greenhatfiles
greenhatfiles commented 2021-09-06 11:05:18 +02:00 (Migrated from localhost:3001)

This comment was removed by @greenhatfiles

*This comment was removed by @greenhatfiles*

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Removed subscriber: @RC12

Removed subscriber: @RC12
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74780
No description provided.